--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ twilio = "^7.4.0"
 python-dotenv = "^0.19.2"
 pandas = "^1.3.5"
 plotly = "^5.5.0"
+ipython = "^7.30.1"
 
 [tool.poetry.dev-dependencies]
 
